# py-golden-records

./: .python-version  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: submit_score.py
golden-records/: __init__.py
