[project]
name = "py-golden-records"
version = "0.1.0"
description = "Unofficial Python SDK for the Golden Records API"
authors = [{ name = "Llanilek", email = "neil@unstrungarchery.co.uk" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"